style: Prevent vote buttons from stretching across the screen

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -346,7 +346,7 @@ a {
 
 .like-element {
   width: 40%;
-  margin: 0 auto;
+  margin: 5px 30%;
   text-align: center;
 }
 
